# realtime-ingestion

./: .env.example  API.md  Cargo.toml  DEPLOY.md  build.sh
migrations/mysql/: 001_init.sql
migrations/postgres/: 001_init.sql
src/: config.rs  dedup.rs  lib.rs  logger.rs  main.rs  models.rs  parser.rs  producer.rs  receiver.rs  security.rs  tcp_listener.rs  telegram.rs
src/consumer/: mod.rs  mysql.rs  postgres.rs
systemd/: consumer-mysql.service  consumer-postgres.service  realtime-ingestion.service
