[package]
name = "realtime-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
# 비동기 런타임 — "full" 은 timer, io, signal 등 모두 포함
tokio       = { version = "1",    features = ["full"] }

# HTTP 서버 프레임워크 — tower 기반, axum 0.7+는 Router에 .with_state() 지원
axum        = { version = "0.7",  features = ["json"] }

# 직렬화/역직렬화
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"

# Redis 클라이언트
# tokio-comp : tokio 비동기 드라이버
# connection-manager : 자동 재연결 + Arc<Mutex<>> 기반 단일 연결 관리자
redis       = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# RabbitMQ AMQP 0-9-1 클라이언트
lapin       = "2"

# lapin Consumer 스트림 순회에 필요한 StreamExt
futures     = "0.3"

# MySQL + PostgreSQL 비동기 쿼리
# runtime-tokio-rustls : tokio 런타임 + TLS
# json : serde_json::Value ↔ JSONB 바인딩 지원
sqlx        = { version = "0.7",  features = ["runtime-tokio-rustls", "mysql", "postgres", "json"] }

# 구조화 로깅
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 편의 에러 처리 — Box<dyn Error>를 ? 로 전파
anyhow      = "1"

# .env 파일 로드 (개발 환경용)
dotenvy     = "0.15"
